--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap-responsive.css">
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
   <link rel="stylesheet" href="/css/labs.css">
 
   <link rel="alternate" type="application/atom+xml" title="OKFN Labs Feed" href="http://okfnlabs.org/blog/feed.xml" />
   <link rel="shortcut icon" href="http://assets.okfn.org/p/okfn/img/favicon.ico">
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+
 </head>
 
 <body class="body-{{page.bodyclass}}">
@@ -47,7 +50,7 @@
           <li><a class="nav-join" href="#about">About</a></li>
           <li><a class="nav-blog" href="#documentation">Documentation</a></li>
           <li><a class="nav-code" href="#contribute">Contribute</a></li>
-          <li><a class="nav-events" href="http://github.com/okfn/reconcile-csv">Code</a></li>
+          <li><a class="nav-events" href="http://github.com/okfn/reconcile-csv"><i class="fa fa-github"></i></a></li>
         </ul>
       </div>
     </div>
