--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 	<div class="navbar">
     <div class="navbar-inner">
       <div class="container">
-        <a href="/" class="brand"><img src="http://assets.okfn.org/p/labs/img/logo.png" alt="Open Knowledge Foundation Labs" style="width:218px; height:62px;"></a>
+        <a href="/" class="brand"><img src="http://assets.okfn.org/p/labs/img/logo.png" alt="Open Knowledge Foundation Labs" style="height:62px;"></a>
         <ul class="nav pull-right">
           <li><a class="nav-join" href="#about">About</a></li>
           <li><a class="nav-blog" href="#documentation">Documentation</a></li>
